# RustLecture2024

./: .gitignore  Cargo.toml  README.md
10_integer_overflow/: Cargo.toml
10_integer_overflow/src/: main.rs
11_show_bits/: Cargo.toml
11_show_bits/src/: main.rs
12_terminate_always/: Cargo.toml
12_terminate_always/src/: main.rs
13_terminate_always_with_test/: Cargo.toml
13_terminate_always_with_test/src/: main.rs
14_integer_sizes/: Cargo.toml
14_integer_sizes/src/: main.rs
15_bench_collatz/: Cargo.toml  OverflowChecks.numbers  README.md
15_bench_collatz/benches/: benchmark.rs
15_bench_collatz/src/: lib.rs  main.rs
16_fail_stop/: Cargo.toml
16_fail_stop/src/: main.rs
17_omission_errors/: Cargo.toml
17_omission_errors/src/: main.rs
18_checked_integers/: Cargo.toml  OverflowChecks.numbers
18_checked_integers/src/: lib.rs  main.rs
19_integer_sizes_fmt/: Cargo.toml
19_integer_sizes_fmt/src/: main.rs
1_hello_world/: 1_screencast.txt
1_hello_world/src/: main.rs
20_bench_u128/: Cargo.toml  OverflowChecks.numbers
20_bench_u128/benches/: benchmark.rs
20_bench_u128/src/: lib.rs  main.rs
21_big_uint/: Cargo.toml
21_big_uint/benches/: benchmark.rs
21_big_uint/src/: lib.rs  main.rs
22_termination_check/: Cargo.toml  README.md
22_termination_check/benches/: benchmark.rs
22_termination_check/src/: lib.rs  main.rs
23_scoping/: Cargo.toml
23_scoping/src/: main.rs
24_static_overflow_check/: Cargo.toml
24_static_overflow_check/src/: main.rs
25_simple_scope/src/: main.rs
26_syntax_errors/: Cargo.toml
26_syntax_errors/src/: main.rs
27_counter2/: Cargo.toml
27_counter2/src/: main.rs
28_drop/src/: main.rs
29_hello_world/src/: main.rs
2_collatz/: Cargo.toml
2_collatz/src/: main.rs  main.s
30_bin_collatz/: Cargo.toml
30_bin_collatz/src/: main.rs
31_u16_collatz/: Cargo.toml
31_u16_collatz/src/: main.rs
32_iter_collatz/: Cargo.toml
32_iter_collatz/src/: main.rs
33_example_no_termination/: Cargo.toml
33_example_no_termination/src/: main.rs
34_example_unbounded_no_termination/: Cargo.toml
34_example_unbounded_no_termination/src/: main.rs
35_bounded_termination/: Cargo.toml
35_bounded_termination/src/: main.rs
3_check_collatz/: Cargo.toml
3_check_collatz/src/: main.rs
3b_check_collatz/: Cargo.toml
3b_check_collatz/src/: main.rs
3c_check_collatz/: Cargo.toml
3c_check_collatz/src/: main.rs
3d_collatz/: Cargo.toml
3d_collatz/src/: main.rs
40_option/: Cargo.toml
40_option/src/: main.rs
41_variable_names/: Cargo.toml  README.md
41_variable_names/benches/: benchmark.rs
41_variable_names/src/: lib.rs  main.rs
42_search_in_array/: Cargo.toml
42_search_in_array/src/: main.rs
43_search_in_arc_array/: Cargo.toml
43_search_in_arc_array/src/: main.rs
4_rnd_collatz/: Cargo.toml
4_rnd_collatz/src/: main.rs
50_monads/: Cargo.toml
51_match_statements/: Cargo.toml
52_function_as_argument/: Cargo.toml
53_simple_expr/: Cargo.toml
54_expr_option/: Cargo.toml
55_no_panic/: Cargo.toml
56_owner_example/: Cargo.toml
5_u128_collatz/: Cargo.toml
6_no_overflow_collatz/: Cargo.toml
7_list_files/: Cargo.toml
9_min_max_integers/: Cargo.toml
(+15 files in other folders)
