[package]
name = "collatz_u128"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[[bin]]
name = "collatz"
path = "src/main.rs"
bench = false
